--- a/games/guess-number/ice40_272p/Makefile
+++ b/games/guess-number/ice40_272p/Makefile
@@ -13,6 +13,7 @@ ICELINK_DIR = /tmp/iCELink
 # included modules
 PATH_LIB = ../../../lib
 ADD_SRC += ${PATH_LIB}/lc1602c/lc1602_i2c.sv
+ADD_SRC += ${PATH_LIB}/random/lfsr.sv
 ADD_SRC += ${PATH_LIB}/3rd_party/Tiny_But_Mighty_I2C_Master_Verilog/rtl/i2c_master.v
 ADD_SRC += ../guess_number.sv
 
