mc1500b demo project - alpha

--- a/demos/mc14500b/ice40_272p/Makefile
+++ b/demos/mc14500b/ice40_272p/Makefile
@@ -1,4 +1,4 @@
-## mc14500b - iCESugar Makefile
+## mc14500b_demo - iCESugar Makefile
 
 # configuration
 SHELL = /bin/sh
@@ -13,12 +13,14 @@ ICELINK_DIR = /tmp/iCELink
 # included modules
 PATH_LIB = ../../../lib
 ADD_SRC += ${PATH_LIB}/essential/sb_inout.sv
+ADD_SRC += ${PATH_LIB}/essential/debounce.sv
+ADD_SRC += ${PATH_LIB}/memory/rom_async.sv
 ADD_SRC += ../mc14500b.sv
+ADD_SRC += ../mc14500b_demo.sv
 
+mc14500b_demo: mc14500b_demo.rpt mc14500b_demo.bin mc14500b_demo.link
 
-mc14500b: mc14500b.rpt mc14500b.bin mc14500b.link
-
-%.json: top_%.sv $(ADD_SRC)
+%.json: top_%.sv $(ADD_SRC) cmd.mem
 	yosys -ql $(basename $@)-yosys.log -p 'synth_ice40 -abc9 -device u -top top_$(basename $@) -json $@' $< $(ADD_SRC)
 
 %.asc: %.json
@@ -40,12 +42,10 @@ mc14500b: mc14500b.rpt mc14500b.bin mc14500b.link
 
 all: mc14500b
 
-%.sim: %_tb.vcd
-
 %.vcd: %.sv $(ADD_SRC)
 
 	#-- Compile
-	iverilog -g2012 -I.. $^ -o $(basename $@).out
+	iverilog -g2012 -Wall -I.. $^ -o $(basename $@).out
 	
 	#-- Simulate
 	./$(basename $@).out
@@ -53,6 +53,13 @@ all: mc14500b
 	#-- Visualize the simulation with gtkwave
 	killall gtkwave || true
 	gtkwave $@ $(basename $@).gtkw &
+
+generate_cmd: cmd.mem
+
+cmd.mem: ../generate_cmd.sv
+	iverilog -g2012 ../generate_cmd.sv -I.. -o generate_cmd.out
+	#-- Simulate
+	./generate_cmd.out
 
 clean:
 	rm -f *.json *.asc *.rpt *.bin *yosys.log
