--- a/cpu/cpu7/ecp5/Makefile
+++ b/cpu/cpu7/ecp5/Makefile
@@ -4,6 +4,7 @@ TARGET=cpu7
 PATH_LIB = ../../../lib
 ADD_SRC += top_$(TARGET).sv
 ADD_SRC += ${PATH_LIB}/memory/bram_read_async.sv
+ADD_SRC += ${PATH_LIB}/memory/bram_sdp.sv
 ADD_SRC += ${PATH_LIB}/container/stack.sv
 ADD_SRC += ${PATH_LIB}/3rd_party/zipcpu/rtl/core/slowmpy.v
 ADD_SRC += ${PATH_LIB}/maths/divu_int.sv
