Display module works on ep4 and xc7

--- a/cpu/mk14/Makefile
+++ b/cpu/mk14/Makefile
@@ -1,7 +1,14 @@
-sim:
+mem:
 	cd programs && make && cd ..
+
+sim: mem
 	cd ice40_272p && touch top_mk14_tb.sv && make mk14.sim && cd ..
 
-link:
-	cd programs && make && cd ..
+link: mem
 	cd ice40_272p && make mk14.link && cd ..
+
+prog: mem
+	cd ecp5 && make prog && cd ..
+
+flash: mem
+	cd ecp5 && make flash && cd ..
