Memory Management Unit added

--- a/cpu/mk14/ecp5/Makefile
+++ b/cpu/mk14/ecp5/Makefile
@@ -3,12 +3,14 @@ TARGET=mk14
 # included modules
 PATH_LIB = ../../../lib
 ADD_SRC += top_$(TARGET).sv
+ADD_SRC += ${PATH_LIB}/memory/bram_sdp.sv
 ADD_SRC += ${PATH_LIB}/memory/bram_sqp.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638_led_key_memmap.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638_led_key.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638.sv
 ADD_SRC += ${PATH_LIB}/essential/sb_inout.sv
 ADD_SRC += ../core.sv
+ADD_SRC += ../mmu.sv
 ADD_SRC += ../mk14_soc.sv
 
 TRELLIS=/usr/local/share/trellis
@@ -19,7 +21,7 @@ $(TARGET).json: top_$(TARGET).sv $(ADD_SRC)
 	yosys -ql $(basename $@)-yosys.log -p "synth_ecp5 -top top_$(basename $@) -json $@" $(ADD_SRC)
 
 $(TARGET)_out.config: $(TARGET).json
-	nextpnr-ecp5 -ql $(basename $@)-nextpnr.log --45k --package CABGA381 --speed 6 --json $< --textcfg $@ --lpf colorlight_i9.lpf --freq 65
+	nextpnr-ecp5 -ql $(basename $@)-nextpnr.log --45k --package CABGA381 --speed 6 --json $< --textcfg $@ --lpf colorlight_i9.lpf --freq 25
 
 $(TARGET).bit: $(TARGET)_out.config
 	ecppack --svf ${TARGET}.svf --compress $< $@
