Call prog from RAM working

--- a/cpu/mk14/ice40_272p/Makefile
+++ b/cpu/mk14/ice40_272p/Makefile
@@ -17,7 +17,7 @@ ADD_SRC += ${PATH_LIB}/tm1638/tm1638_led_key_memmap.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638_led_key.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638.sv
 ADD_SRC += ${PATH_LIB}/essential/sb_inout.sv
-ADD_SRC += ${PATH_LIB}/essential/debounce.sv
+ADD_SRC += ${PATH_LIB}/infrared/infrared_rx.sv
 ADD_SRC += ../core.sv
 ADD_SRC += ../mmu.sv
 ADD_SRC += ../mk14_soc.sv
