uart_rx & intel_hex added to SoC - alpha

--- a/cpu/mk14/ice40_272p/Makefile
+++ b/cpu/mk14/ice40_272p/Makefile
@@ -18,6 +18,8 @@ ADD_SRC += ${PATH_LIB}/tm1638/tm1638_led_key.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638.sv
 ADD_SRC += ${PATH_LIB}/essential/sb_inout.sv
 ADD_SRC += ${PATH_LIB}/infrared/infrared_rx.sv
+ADD_SRC += ${PATH_LIB}/uart-2/uart_rx.sv
+ADD_SRC += ${PATH_LIB}/converter/intel_hex.sv
 ADD_SRC += ../core.sv
 ADD_SRC += ../mmu.sv
 ADD_SRC += ../mk14_soc.sv
