--- a/cpu/mk14/programs/Makefile
+++ b/cpu/mk14/programs/Makefile
@@ -1,4 +1,13 @@
-all: test.mem test2.mem SCIOS_Version_2.mem multiply.mem collatz.mem display.mem clock.mem segtris.mem
+all: \
+	test.mem \
+	test2.mem \
+	multiply.mem \
+	collatz.mem \
+	display.mem \
+	clock.mem \
+	segtris.mem \
+	ambush.mem \
+	SCIOS_Version_2.mem
 
 %.mem: %.asm
 	~/program/sbasm3/sbasm $<
