--- a/cpu/mk14/ice40_272p/Makefile
+++ b/cpu/mk14/ice40_272p/Makefile
@@ -22,6 +22,7 @@ ADD_SRC += ${PATH_LIB}/uart-2/uart_rx.sv
 ADD_SRC += ${PATH_LIB}/converter/intel_hex.sv
 ADD_SRC += ../core.sv
 ADD_SRC += ../mmu.sv
+ADD_SRC += ../ir_keypad.sv
 ADD_SRC += ../mk14_soc.sv
 
 mk14: mk14.rpt mk14.bin mk14.link
