--- a/graphics/hardware-sprites/gowin/hardware-sprites/impl/project_process_config.json
+++ b/graphics/hardware-sprites/gowin/hardware-sprites/impl/project_process_config.json
@@ -79,7 +79,7 @@
  "Synthesis On/Off Implemented as Translate On/Off" : false,
  "Synthesize_tool" : "GowinSyn",
  "TclPre" : "",
- "TopModule" : "top_tinyf_scale",
+ "TopModule" : "top_vdu_test",
  "USERCODE" : "default",
  "Unused_Pin" : "As_input_tri_stated_with_pull_up",
  "Update_Compile_Point_Timing_Data" : false,
