--- a/cpu/mk14/ecp5/Makefile
+++ b/cpu/mk14/ecp5/Makefile
@@ -5,13 +5,22 @@ PATH_LIB = ../../../lib
 ADD_SRC += top_$(TARGET).sv
 ADD_SRC += ${PATH_LIB}/memory/bram_sdp.sv
 ADD_SRC += ${PATH_LIB}/memory/bram_sqp.sv
+ADD_SRC += ${PATH_LIB}/memory/rom_async.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638_led_key_memmap.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638_led_key.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638.sv
 ADD_SRC += ${PATH_LIB}/essential/sb_inout.sv
+ADD_SRC += ${PATH_LIB}/infrared/infrared_rx.sv
+ADD_SRC += ${PATH_LIB}/uart-2/uart_rx.sv
+ADD_SRC += ${PATH_LIB}/converter/intel_hex.sv
+ADD_SRC += ${PATH_LIB}/display/display_272p.sv
+ADD_SRC += ${PATH_LIB}/clock/ecp5/clock_272p.sv
 ADD_SRC += ../core.sv
 ADD_SRC += ../mmu.sv
+ADD_SRC += ../ir_keypad.sv
 ADD_SRC += ../mk14_soc.sv
+ADD_SRC += ../vdu/vdu_vga_272p.sv
+ADD_SRC += ../vdu/vdu.sv
 
 TRELLIS=/usr/local/share/trellis
 
