--- a/cpu/mk14/ice40_272p/Makefile
+++ b/cpu/mk14/ice40_272p/Makefile
@@ -13,6 +13,7 @@ ICELINK_DIR = /tmp/iCELink
 # included modules
 PATH_LIB = ../../../lib
 ADD_SRC += ${PATH_LIB}/memory/bram_sdp.sv
+ADD_SRC += ${PATH_LIB}/memory/bram_sqp.sv
 ADD_SRC += ${PATH_LIB}/memory/rom_async.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638_led_key_memmap.sv
 ADD_SRC += ${PATH_LIB}/tm1638/tm1638_led_key.sv
@@ -27,7 +28,7 @@ ADD_SRC += ../core.sv
 ADD_SRC += ../mmu.sv
 ADD_SRC += ../ir_keypad.sv
 ADD_SRC += ../mk14_soc.sv
-ADD_SRC += ../vdu/mk14_vdu.sv
+ADD_SRC += ../vdu/vdu_vga_272p.sv
 ADD_SRC += ../vdu/vdu.sv
 
 mk14: mk14.rpt mk14.bin mk14.link
